--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Doucment</title>
+    <link rel="stylesheet" href="all.css">
 </head>
 <body>
+    <h1>Title</h1>
 
 
-    
 </body>
 </html>
